# ddns-updater

./: Dockerfile  pyproject.toml
ddns-update/: main.py
ddns-update/services/: __init__.py  cloudflare_service.py  ip_service.py
